# fastapi_authorization

./: Dockerfile  README.md  logging.yaml  pyproject.toml
app/: main.py
app/api/: dependencies.py
app/api/endpoints/: authentication.py  currency.py
app/core/: config.py  security.py
app/database/: db_init.py
app/database/repositories/: repository_base.py  session_repo.py  user_repo.py
app/exceptions/: auth_exceptions.py  currencies_exceptions.py  token_exceptions.py
app/models/: base.py
app/models/db/: session.py  user.py
app/models/schemas/: currency.py  session.py  tokens.py  user.py
app/services/authorization/: auth_service.py  session_service.py  user_service.py
app/services/currency/: currency_service.py
app/utils/: currency_API.py  uow.py
docker_cmds/: app.sh
logging_init/: logs_init.py
migrations/: env.py
migrations/versions/: 70168fea064a_v2.py  87153d079432_v1.py
